Created the HTML structure with placeholder text

--- a/index.html
+++ b/index.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html>
+
   <head>
+    <title>Maddy Mehi</title>
     <meta charset="UTF-8">
-    <title>My First Page</title>
   </head>
+
   <body>
     <header>
-      This is my Website Header
-      <nav>This is where the navigation links will be added</nav>
+      <h1>Maddy Mehi</h1>
     </header>
     <main>
-      This is the main content of the page
-      <article>This is the article on the page</article>
-      <aside>Some additional but not relevant information</aside>
-      <section>Some more information about our website</section>
+      <article>
+        <h2>About Me</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat, urna et 
+          sollicitudin lacinia, urna felis pulvinar mi, nec pretium eros nunc id nibh. Phasellus semper, 
+          dui vel lacinia semper, odio ipsum pretium nisi, ut cursus erat metus nec libero. Sed hendrerit 
+          dolor massa, at placerat tortor condimentum id. Curabitur bibendum finibus purus, sed malesuada 
+          mauris sollicitudin at. Praesent a aliquet nibh. Aliquam varius eget leo vitae malesuada. Donec 
+          risus quam, consequat ut eros ut, pharetra finibus dui.
+        </p>
+        <p>
+          Proin porttitor ligula ullamcorper tincidunt maximus. Nulla eget nisi porttitor sapien dictum 
+          porta. Praesent ornare sem erat, at faucibus ex lacinia nec. Sed sit amet laoreet dui. Maecenas 
+          ultrices lectus sed enim tempor tristique. Etiam vitae eros elit. Sed iaculis nisl tortor, eget 
+          aliquet tortor scelerisque nec.
+        </p>
+        <blockquote>
+          Proin porttitor ligula ullamcorper tincidunt maximus. Nulla eget nisi porttitor sapien dictum porta. 
+          Praesent ornare sem erat, at faucibus ex lacinia nec. Sed sit amet laoreet dui. Maecenas ultrices 
+          lectus sed enim tempor tristique. Etiam vitae eros elit. Sed iaculis nisl tortor, eget aliquet 
+          tortor scelerisque nec. <cite>Citation</cite>
+        </blockquote>
+      </article>
     </main>
-    <footer>The footer of the web page</footer>
+    <footer>&#169 Maddy Mehi 2021</footer>
   </body>
 </html>
