--- a/index.html
+++ b/index.html
@@ -13,28 +13,52 @@
     <main>
       <article>
         <h2>About Me</h2>
+
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. In volutpat, urna et 
-          sollicitudin lacinia, urna felis pulvinar mi, nec pretium eros nunc id nibh. Phasellus semper, 
-          dui vel lacinia semper, odio ipsum pretium nisi, ut cursus erat metus nec libero. Sed hendrerit 
-          dolor massa, at placerat tortor condimentum id. Curabitur bibendum finibus purus, sed malesuada 
-          mauris sollicitudin at. Praesent a aliquet nibh. Aliquam varius eget leo vitae malesuada. Donec 
-          risus quam, consequat ut eros ut, pharetra finibus dui.
+          Maddy is a 36-year-old non-binary person. They are the third in a set of fraternal triplets, having 2 
+          two “older”<sup>1</sup> sisters. Their favourite colour is blue; their favourite food is sushi; and 
+          their favourite animals are bunnies. They are an experienced barista, and an accomplished hobby 
+          mixologist. They have a love for theatre and film as well as role playing games; they are drawn to 
+          these mediums because it facilitates a creative narrative. Their favourite director is Taika Waititi
+          and their favourite authors are Neil Gaiman and Terry Pratchet. 
         </p>
+
+        <aside>
+          <blockquote>
+            Give a man a fire and he's warm for a day, but set fire to him and he's warm for the rest 
+            of his life. <cite>Terry Pratchett, Jingo</cite>
+          </blockquote>
+        </aside>
+
         <p>
-          Proin porttitor ligula ullamcorper tincidunt maximus. Nulla eget nisi porttitor sapien dictum 
-          porta. Praesent ornare sem erat, at faucibus ex lacinia nec. Sed sit amet laoreet dui. Maecenas 
-          ultrices lectus sed enim tempor tristique. Etiam vitae eros elit. Sed iaculis nisl tortor, eget 
-          aliquet tortor scelerisque nec.
+          In high school Maddy enjoyed computer programming, photography, and media/film classes, which 
+          influenced them to pursue a Bachelor of Computing with an area of application in studio art from 
+          <abbr title="The University of Guelph">UoG</abbr>. During the program they were drawn towards 
+          <abbr title="Human Computer Interation">HCI</abbr> because of the interplay between technology and 
+          human psychology. The highlight of those 4 years was getting into a hack battle with a 4chan troll 
+          from Berkley. Pre-pandemic Maddy was working as a stagehand and warehouse associate in the live 
+          events/audio-visual industry and volunteering at theatre festivals when they had free time. 
         </p>
-        <blockquote>
-          Proin porttitor ligula ullamcorper tincidunt maximus. Nulla eget nisi porttitor sapien dictum porta. 
-          Praesent ornare sem erat, at faucibus ex lacinia nec. Sed sit amet laoreet dui. Maecenas ultrices 
-          lectus sed enim tempor tristique. Etiam vitae eros elit. Sed iaculis nisl tortor, eget aliquet 
-          tortor scelerisque nec. <cite>Citation</cite>
-        </blockquote>
+
+        <section>
+          <h3>Some fun <em>and 100% true</em> facts about Maddy</h3>
+
+          <ul>
+            <li>Maddy began their life inside a petri dish in a laboratory</li>
+            <li>They were a hacker at the age of 6</li>
+            <li>Maddy lives in a van <del>down by the river</del></li>
+            <li>Maddy has reached a top speed 120 mph</li>
+            <li>They have on occasion ventured out into the woods where they run around and act like a goblin</li>
+            <li>Maddy hates writing bios</li>
+          </ul>
+        </section>
+
+        <aside>
+          <p><sub><sup>1</sup>By a whole 30-60 seconds</sub></p>
+        </aside>
+        
       </article>
     </main>
-    <footer>&#169 Maddy Mehi 2021</footer>
+    <footer> &#169 Maddy Mehi 2021 </footer>
   </body>
 </html>
