added html-assignment folder

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -49,7 +49,7 @@
             <li>Maddy lives in a van <del>down by the river</del></li>
             <li>Maddy has reached a top speed 120 mph</li>
             <li>They have on occasion ventured out into the woods where they run around and act like a goblin</li>
-            <li>Maddy hates writing bios</li>
+            <li>Maddy does not like writing bios</li>
           </ul>
         </section>
 
