Changed "third" to "3rd" and reworded the footnote

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -15,7 +15,7 @@
         <h2>About Me</h2>
 
         <p>
-          Maddy is a 36-year-old non-binary person. They are the third in a set of fraternal triplets, having 2 
+          Maddy is a 36-year-old non-binary person. They are the 3<sup>rd</sup> in a set of fraternal triplets, having 2 
           two “older”<sup>1</sup> sisters. Their favourite colour is blue; their favourite food is sushi; and 
           their favourite animals are bunnies. They are an experienced barista, and an accomplished hobby 
           mixologist. They have a love for theatre and film as well as role playing games; they are drawn to 
@@ -54,7 +54,7 @@
         </section>
 
         <aside>
-          <p><sub><sup>1</sup>By a whole 30-60 seconds</sub></p>
+          <p><sub><sup>1</sup>By about 30-60 seconds</sub></p>
         </aside>
         
       </article>
