Added an image and list of hobbies

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -11,9 +11,10 @@
       <h1>Maddy Mehi</h1>
     </header>
     <main>
+      <img src="images/I_have_a_picture_of_maddy.jpg" width="300" title="I have a picture of Maddy and not a cactus" 
+      alt="A weirdo wearing a costume mash up of different animals">
       <article>
         <h2>About Me</h2>
-
         <p>
           Maddy is a 36-year-old non-binary person. They are the 3<sup>rd</sup> in a set of fraternal triplets, having 2 
           two “older”<sup>1</sup> sisters. Their favourite colour is blue; their favourite food is sushi; and 
@@ -51,6 +52,18 @@
             <li>They have on occasion ventured out into the woods where they run around and act like a goblin</li>
             <li>Maddy does not like writing bios</li>
           </ul>
+        </section>
+
+        <section>
+          <h3>What Does Maddy Even Do?!</h3>
+
+          <ol>
+            <li>Plays a lot of D&D and LARP</li>
+            <li>Goes to ren faires and the pirate festival</li>
+            <li>Runs an outdoor furry summer camp</li>
+            <li>Just drives around</li>
+            <li>Naps</li>
+          </ol>
         </section>
 
         <aside>
