Added header image to notes.html

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -9,11 +9,12 @@
     <body>
         <header>
         <h1>It's Dangeous to Go Alone, Take This...</h1>
+        <img src="images/take_this_2.jpeg" alt="Link in Legend of Zelda being offered a sword" width="550">
         </header>
 
         <main>
             <article>
-                <h2>Handy Guide to HTML Content Sectioning Tags</h2>
+                <h2>...Handy Guide to HTML Content Sectioning Tags</h2>
                 <dl>
                     <dt>nav</dt>
                     <dd>Holds the site, or in page navigation links.</dd>
