Added nav links to index and notes

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -7,12 +7,20 @@
   </head>
 
   <body>
+
     <header>
+      <nav>
+        <a href="index.html">About Me</a>
+        <a href="notes.html">Link!</a>
+      </nav>
       <h1>Maddy Mehi</h1>
     </header>
+
     <main>
+
       <img src="images/I_have_a_picture_of_maddy.jpg" width="300" title="I have a picture of Maddy and not a cactus" 
-      alt="A weirdo wearing a costume mash up of different animals">
+      alt="A person wearing a costume mash up of different animals">
+
       <article>
         <h2>About Me</h2>
         <p>
@@ -55,13 +63,12 @@
         </section>
 
         <section>
-          <h3>What Does Maddy Even Do?!</h3>
+          <h3>What does Maddy even do?!</h3>
 
           <ol>
-            <li>Plays a lot of D&D and LARP</li>
+            <li>Plays D&D and LARPs</li>
             <li>Goes to ren faires and the pirate festival</li>
             <li>Runs an outdoor furry summer camp</li>
-            <li>Just drives around</li>
             <li>Naps</li>
           </ol>
         </section>
