--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -8,8 +8,14 @@
 
     <body>
         <header>
-        <h1>It's Dangeous to Go Alone, Take This...</h1>
-        <img src="images/take_this_2.jpeg" alt="Link in Legend of Zelda being offered a sword" width="550">
+
+            <nav>
+                <a href="index.html">About Me</a>
+                <a href="notes.html">Link!</a>
+              </nav>
+
+            <h1>It's Dangeous to Go Alone, Take This...</h1>
+            <img src="images/take_this_2.jpeg" alt="Link in Legend of Zelda being offered a sword" width="550">
         </header>
 
         <main>
