Added language attribute to index and notes

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
     <title>Maddy Mehi</title>
@@ -63,7 +63,7 @@
         </section>
 
         <section>
-          <h3>What does Maddy even do?!</h3>
+          <h3>What does Maddy even do?</h3>
 
           <ol>
             <li>Plays D&D and LARPs</li>
@@ -79,6 +79,6 @@
         
       </article>
     </main>
-    <footer> &#169 Maddy Mehi 2021 </footer>
+    <footer> &#169; Maddy Mehi 2021 </footer>
   </body>
 </html>
