Made image a figure and updated the size & alt text. Added additional hobby

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -18,11 +18,12 @@
 
     <main>
 
-      <img src="images/i_have_a_picture_of_maddy.jpg" height="300" title="I have a picture of Maddy and not a cactus" 
-      alt="A person wearing a costume mash up of different animals">
-
       <article>
         <h2>About Me</h2>
+        <figure>
+          <img src="images/i_have_a_picture_of_maddy.jpg" height="200" title="I have a picture of Maddy and 
+          not a cactus" alt="A picture of Maddy Mehi">
+        </figure>
         <p>
           Maddy is a 36-year-old non-binary person. They are the 3<sup>rd</sup> in a set of fraternal triplets, having 2 
           two “older”<sup>1</sup> sisters. Their favourite colour is blue; their favourite food is sushi; and 
@@ -69,6 +70,7 @@
             <li>Plays D&D and LARPs</li>
             <li>Goes to ren faires and the pirate festival</li>
             <li>Runs an outdoor furry summer camp</li>
+            <li>Nature and urban photography</li>
             <li>Naps</li>
           </ol>
         </section>
