--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,7 +8,10 @@
 
   <body>
 
+    <!-- Page Header -->
     <header>
+
+      <!-- Navigation links-->
       <nav>
         <a href="index.html">About Me</a>
         <a href="notes.html">Link!</a>
@@ -18,25 +21,35 @@
 
     <main>
 
+      <!-- Maddy Mehi's bio -->
+
+      <!-- Can I just say, that I had first learned HTML and CSS back in the early 2000s and holy shit
+      HTML5 has improved everything so much! I really like the new semantic tags rather than just making
+      divs for everything (and before that it was tables and frames... I am dating myself...)  -->
+
       <article>
         <h2>About Me</h2>
+
+        <!-- Bio image -->
         <figure>
           <img src="images/i_have_a_picture_of_maddy.jpg" height="200" title="I have a picture of Maddy and 
           not a cactus" alt="A picture of Maddy Mehi">
         </figure>
+
         <p>
           Maddy is a 36-year-old non-binary person. They are the 3<sup>rd</sup> in a set of fraternal triplets, having 2 
           two “older”<sup>1</sup> sisters. Their favourite colour is blue; their favourite food is sushi; and 
           their favourite animals are bunnies. They are an experienced barista, and an accomplished hobby 
           mixologist. They have a love for theatre and film as well as role playing games; they are drawn to 
           these mediums because it facilitates a creative narrative. Their favourite director is Taika Waititi
-          and their favourite authors are Neil Gaiman and Terry Pratchet. 
+          and their favourite authors are Neil Gaiman and Sir Terry Pratchet. 
         </p>
 
+        <!-- Sir Terry Pratchett quote. I forgot that he was knighted!-->
         <aside>
           <blockquote>
             Give a man a fire and he's warm for a day, but set fire to him and he's warm for the rest 
-            of his life. <cite>Terry Pratchett, Jingo</cite>
+            of his life. <cite>Sir Terry Pratchett, Jingo</cite>
           </blockquote>
         </aside>
 
@@ -50,6 +63,7 @@
           events/audio-visual industry and volunteering at theatre festivals when they had free time. 
         </p>
 
+        <!-- Fun facts list-->
         <section>
           <h3>Some fun <em>and 100% true</em> facts about Maddy</h3>
 
@@ -63,6 +77,7 @@
           </ul>
         </section>
 
+        <!-- Hobbies list-->
         <section>
           <h3>What does Maddy even do?</h3>
 
@@ -75,12 +90,15 @@
           </ol>
         </section>
 
+        <!-- Footnotes section-->
         <aside>
           <p><sub><sup>1</sup>By about 30-60 seconds</sub></p>
         </aside>
         
       </article>
     </main>
+
+    <!-- Footer and copyright info-->
     <footer> &#169; Maddy Mehi 2021 </footer>
   </body>
 </html>
