Changed bg colour and font

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -4,6 +4,14 @@
   <head>
     <title>Maddy Mehi</title>
     <meta charset="UTF-8">
+
+    <!-- Main style sheet-->
+    <link href="styles/main.css" rel="stylesheet">
+
+    <!-- Linking Poppins font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   </head>
 
   <body>
