Added box shadow to bio picture

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -24,7 +24,7 @@
         <a href="index.html">About Me</a>
         <a href="notes.html">Link!</a>
       </nav>
-      <h1>Maddy Mehi</h1>
+      <h1 class="site-title">Maddy Mehi</h1>
     </header>
 
     <main>
@@ -40,7 +40,7 @@
 
         <!-- Bio image -->
         <figure>
-          <img src="images/i_have_a_picture_of_maddy.jpg" height="200" title="I have a picture of Maddy and 
+          <img src="images/i_have_a_picture_of_maddy.jpg" id="my-image" height="200" title="I have a picture of Maddy and 
           not a cactus" alt="A picture of Maddy Mehi">
         </figure>
 
