--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -20,15 +20,15 @@
             <nav>
                 <a href="index.html">About Me</a>
                 <a href="notes.html">Link!</a>
-              </nav>
+            </nav>
 
-            <h1>It's Dangeous to Go Alone, Take This...</h1>
+            <h3>It's Dangeous to Go Alone, Take This...</h3>
             <img src="images/take_this_2.jpeg" alt="Link in Legend of Zelda being offered a sword" width="550">
+            <h1 class="site-title">Handy Guide to HTML Content Sectioning Tags</h1>
         </header>
 
         <main>
             <article>
-                <h2>...Handy Guide to HTML Content Sectioning Tags</h2>
                 <dl>
                     <dt>nav</dt>
                     <dd>Holds the site, or in page navigation links.</dd>
