Made sub headings to Teko font and dark cyan. Made image header Teko and larger

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -8,10 +8,16 @@
     <!-- Main style sheet-->
     <link href="styles/main.css" rel="stylesheet">
 
-    <!-- Linking Poppins font-->
+    <!-- Main text font (Poppins) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+  
+    <!-- Subheader font (Teko)-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
