--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -12,6 +12,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    
+        <!-- Subheader font (Teko)-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -22,7 +27,7 @@
                 <a href="notes.html">Link!</a>
             </nav>
 
-            <h3>It's Dangeous to Go Alone, Take This...</h3>
+            <p id="image-heading">It's Dangeous to Go Alone, Take This...</p>
             <img src="images/take_this_2.jpeg" alt="Link in Legend of Zelda being offered a sword" width="550">
             <h1 class="site-title">Handy Guide to HTML Content Sectioning Tags</h1>
         </header>
