Updated header sizes

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -33,6 +33,10 @@
         </header>
 
         <main>
+            
+            <!-- Can I just say, that I had first learned HTML and CSS back in the early 2000s and holy shit
+            HTML5 has improved everything so much! I really like the new semantic tags rather than just making
+            divs for everything (and before that it was tables and frames... I am dating myself...)  -->
             <article>
                 <dl>
                     <dt>nav</dt>
