--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -16,7 +16,7 @@
     <!-- Subheader font (Teko)-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/cul{ss2?family=Teko:wght@300&display=swap" rel="stylesheet">
 
   </head>
 
@@ -83,7 +83,7 @@
             <li>They were a hacker at the age of 6</li>
             <li>Maddy lives in a van <del>down by the river</del></li>
             <li>Maddy has reached a top speed 120 mph</li>
-            <li>They have on occasion ventured out into the woods where they run around and act like a goblin</li>
+            <li>They will venture into the woods and run around acting like a goblin</li>
             <li>Maddy does not like writing bios</li>
           </ol>
         </section>
