Added comments to notes.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -47,6 +47,7 @@
           not a cactus" alt="A picture of Maddy Mehi">
         </figure>
 
+        <!-- Bio paragraphs-->
         <p>
           Maddy is a 36-year-old non-binary person. They are the 3<sup>rd</sup> in a set of fraternal triplets, having 2 
           two “older”<sup> 1</sup> sisters. Their favourite colour is blue; their favourite food is sushi; and 
