--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -22,13 +22,17 @@
     <body>
         <header>
 
+            <!-- Navigation Links-->
             <nav>
                 <a href="index.html">About Me</a>
                 <a href="notes.html">Link!</a>
             </nav>
 
+            <!-- Page heading-->
             <p id="image-heading">It's Dangeous to Go Alone, Take This...</p>
             <img src="images/take_this_2.jpeg" alt="Link in Legend of Zelda being offered a sword" width="550">
+            
+            <!-- Content title-->
             <h1 class="site-title">Handy Guide to HTML Content Sectioning Tags</h1>
         </header>
 
