--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -16,7 +16,7 @@
     <!-- Subheader font (Teko)-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/cul{ss2?family=Teko:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
 
   </head>
 
