added header image

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -12,7 +12,9 @@
   <body>
     <div class="container">
         <header>
-            <h1>Lone Starfish</h1>
+
+            <img class="header-image" src="images/lone-starfish-wide.jpg">
+            <h1 class="header-title">Lone Starfish</h1>
         
             <!-- Navigation link bar-->
             <nav> 
