styled navigation bar

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -17,10 +17,10 @@
             <h1 class="header-title">Lone Starfish</h1>
 
             <!-- Navigation link bar-->
-            <nav> 
-                <a>HOME</a> 
-                <a>STORY</a>
-                <a>CONTACT</a>
+            <nav>  
+                <a href="#">HOME</a>
+                <a href="#">STORY</a>
+                <a href="#">CONTACT</a>
             </nav>
         </header>    
 
