Added header margins and made title position relative

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -17,7 +17,7 @@
             <h1 class="header-title">Lone Starfish</h1>
 
             <!-- Navigation link bar-->
-            <nav>  
+            <nav class="clearfix">  
                 <a href="#">HOME</a>
                 <a href="#">STORY</a>
                 <a href="#">CONTACT</a>
