Floated article image/text. Adjusted spacing.

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -27,16 +27,16 @@
         <main>
 
             <!--Life of a Starfish article--> 
-            <article>
+            <article class="clearfix">
                 <h2>Life of a Starfish</h2>
-                
-                <!-- Starfish image-->
-                <figure>
-                    <img src="images/lone-starfish.jpg" alt="A starfish">
-                </figure>
 
                 <!--Main article text-->
-                <p>
+                <p class="clearfix">
+                    <!-- Starfish image-->
+                    <figure>
+                        <img class="text-wrap-right" src="images/lone-starfish.jpg" alt="A starfish">
+                    </figure>
+
                     Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. 
                     Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish 
                     peamouth halfbeak batfish Australian prowfish mouthbrooder." Gibberfish tui chub mooneye 
@@ -52,7 +52,6 @@
                     moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black 
                     triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred 
                     danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.
-
                 </p>
 
                 <!--Facts about Starfish-->
