--- a/midterm/index.html
+++ b/midterm/index.html
@@ -27,15 +27,13 @@
         <main>
 
             <!--Life of a Starfish article--> 
-            <article class="clearfix">
+            <article>
                 <h2>Life of a Starfish</h2>
 
                 <!--Main article text-->
                 <p class="clearfix">
                     <!-- Starfish image-->
-                    <figure>
-                        <img class="text-wrap-right" src="images/lone-starfish.jpg" alt="A starfish">
-                    </figure>
+                    <img class="text-wrap-right" src="images/lone-starfish.jpg" alt="A starfish">
 
                     Swallower catla Black angelfish grunter striped bass scissor-tail rasbora; slender mola. 
                     Snapper catalufa silver driftfish, kaluga lungfish boga greeneye, "french angelfish 
@@ -52,6 +50,7 @@
                     moray velvet catfish flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black 
                     triggerfish pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua'a barred 
                     danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally, dottyback.
+                
                 </p>
 
                 <!--Facts about Starfish-->
