styled submit button

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -101,7 +101,7 @@
                         <input id="maybe" type="radio" name="visit_starfish" value="maybe">
                     </div>            
                     <!-- submit button-->
-                    <input type="submit" value="Send" class="own_line">
+                    <input type="submit" value="SEND" class="own_line">
                 </form>
             </aside>
         </main>
