Validated html/css

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -16,7 +16,7 @@
         <header>
 
             <!-- Header image/page title-->
-            <img class="header-image" src="images/lone-starfish-wide.jpg">
+            <img class="header-image" src="images/lone-starfish-wide.jpg" alt="">
             <h1 class="header-title">Lone Starfish</h1>
 
             <!-- Navigation link bar-->
@@ -82,7 +82,7 @@
 
                     <!-- User's Email-->
                     <label for="contact_email" class="own_line">Your Email</label>
-                    <input type="text" id="contact_email" type="email" name="contact_email">
+                    <input type="email" id="contact_email" name="contact_email">
 
                     <!-- User's message-->
                     <label for="contact_message" class="own_line">Your Message</label>
