Added footer with copyright info

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -105,6 +105,10 @@
                 </form>
             </aside>
         </main>
+
+        <footer>
+            <p> &copy; Lone Starfish.</p>
+        </footer>
     </div>
   </body>
 
