--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -12,19 +12,33 @@
         <!-- Content container, needed to constrain content on larger screens-->
         <div id="container">
 
-            <header id="home">
+            <header>
 
-                <!-- Logo-->
-                <img src="images/logo.png">
+                <!-- Header content. Will hold items in a flex box-->
+                <div class="section-container" id="home">
+                    
+                    <!-- Logo-->
+                    <div class="header-flex-item">
+                        <img class="header" src="images/logo.png" alt="">
+                    </div>
 
-                <!-- Navigation Bar-->
-                <nav class="nav-grid">
-                    <a href="#home">Home</a>
-                    <a href="#about">About Us</a>
-                    <a href="#services">Services</a>
-                    <a href="#team">Team</a>
-                    <a href="#contact">Contact</a>
-                </nav>
+                    <!-- Navigation Bar. Will hold links in a grid-->
+                    <nav class="header-flex-item">
+
+                        <!-- Section Links-->
+                        <a href="#home">Home</a>
+                        <a href="#about">About Us</a>
+                        <a href="#services">Services</a>
+                        <a href="#team">Team</a>
+                        <a href="#contact">Contact</a>
+
+                        <!-- Search Bar-->
+                        <form class="header-flex-item" action="index.html" method="post">
+                            <input type="text" placeholder="Search" name="search">
+                            <button type="submit"><i class="fa fa-search"></i></button>
+                        </form>
+                    </nav>
+                </div>
             </header>
 
             <!-- About Section flex box-->
@@ -38,7 +52,7 @@
             </div>
 
             <!-- Vision section flex box. No link anchor for this section-->
-            <div class="section-container">
+            <div class="section-container" id="vision">
                 
             </div>
 
