Added some commenting. Need to troubleshoot search icon

--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- Stylesheet for the fico icons-->
+        <link rel="stylesheet" href="styles/icons.css">
     
         <title>Three Star Media</title>
     </head>
@@ -35,7 +38,9 @@
                         <!-- Search Bar-->
                         <form class="header-flex-item" action="index.html" method="post">
                             <input type="text" placeholder="Search" name="search">
-                            <button type="submit"><i class="fa fa-search"></i></button>
+<!-- TROUBLESHOOT
+     SEARCH ICON --------->                            
+                            <button type="submit"><i class="icon icon-zoom"></i></button>
                         </form>
                     </nav>
                 </div>
