Added home section content

--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -18,7 +18,7 @@
             <header>
 
                 <!-- Header content. Will hold items in a flex box-->
-                <div class="section-container" id="home">
+                <div class="section-container">
                     
                     <!-- Logo-->
                     <div class="header-flex-item">
@@ -45,6 +45,20 @@
                     </nav>
                 </div>
             </header>
+
+            <!-- Home Section flex box. main-banner image BG-->
+                <div class="section-container" id="home">
+
+                    <!-- Welcome Message-->
+                    <h1>Welcome to Three Star Media</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc posuere lacus sed 
+                        felis euismod, quis dictum neque luctus. Integer et tellus nunc. 
+                    </p>
+
+                    <!-- Connect with Us - Button linked to the contact section-->
+                    <a href="#contact">Connect with Us <i class="icon icon-right"></i></button>
+                </div>
 
             <!-- About Section flex box-->
             <div class="section-container" id="about">
