Added content for About Us section

--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
 
-        <!-- Content container, needed to constrain content on larger screens-->
+        <!-- Site container, needed to constrain content on larger screens-->
         <div id="container">
 
             <header>
@@ -49,23 +49,55 @@
             <!-- Home Section flex box. main-banner image BG-->
                 <div class="section-container" id="home">
 
-                    <!-- Welcome Message-->
-                    <h1>Welcome to Three Star Media</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc posuere lacus sed 
-                        felis euismod, quis dictum neque luctus. Integer et tellus nunc. 
-                    </p>
+                    <!-- low opacity BG-->
+                    <div class="content-container">
 
-                    <!-- Connect with Us - Button linked to the contact section-->
-                    <a href="#contact">Connect with Us <i class="icon icon-right"></i></button>
+                        <!-- Welcome Message-->
+                        <h1>Welcome to Three Star Media</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc posuere lacus sed 
+                            felis euismod, quis dictum neque luctus. Integer et tellus nunc. 
+                        </p>
+
+                        <!-- Connect with Us - Button linked to the contact section-->
+                        <a href="#contact">Connect with Us <i class="icon icon-right"></i></a>
+
+                    </div>
                 </div>
 
-            <!-- About Section flex box-->
+            <!-- About Section. Contents will be arranged in a grid-->
             <div class="section-container" id="about">
 
+                <div class="content-container"> 
+
+                    <!-- About Us image content-->
+                    <img class="half-width-content" src="images/about-us.jpg" alt="">
+
+                    <!-- About Us text content-->
+                    <div class="half-width-content"> 
+                        <h2>About Us</h2>
+
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus turpis magna, 
+                            eleifend sit amet quam non, ultrices maximus urna. Aliquam ultricies dolor eu mi bibendum, 
+                            non facilisis lorem efficitur. Nam tempus eros ante, vel elementum metus malesuada ac. 
+                            Nulla nulla nisi, molestie non pretium sit amet, pretium a nisi. Cras convallis volutpat 
+                            egestas. Suspendisse eget leo odio. Aliquam non enim venenatis, elementum ante a, aliquam 
+                            dolor. Aliquam eget dignissim enim, ut dapibus est. 
+                        </p>
+                        
+                        <p>
+                            Aliquam dapibus, metus vitae feugiat 
+                            ultricies, eros elit dapibus diam, id dignissim leo lorem id tellus. Cras vel arcu lacus. 
+                            In hac habitasse platea dictumst. Pellentesque habitant morbi tristique senectus et netus et 
+                            malesuada fames ac turpis egestas. Mauris blandit placerat feugiat. Proin sodales sollicitudin 
+                            diam nec condimentum.
+                        </p>
+                    </div>
+                </div>
             </div>
 
-            <!-- Services section flex box-->
+            <!-- Services section-->
             <div class="section-container" id="services">
                 
             </div>
