Added vision  content

--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -209,10 +209,24 @@
 
             </div> <!-- end of services section container-->
 
-            <!-- Vision section flex box. No link anchor for this section-->
+            <!-- Vision section flex box. No link anchor for this section vision image BG-->
             <div class="section-container" id="vision">
+
                 <div class="content-container">
                     
+                    <h3>Our Vision</h3>
+                    <p>
+                        Donec viverra elit sit amet justo posuere aliquet. Donec vel ante pretium leo posuere 
+                        dignissim. Maecenas faucibus eget felis sit amet viverra. Aenean congue ornare congue. 
+                        Suspendisse feugiat lacus vel massa lobortis, ac luctus nisi tempus. Vestibulum ante 
+                        ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aliquam vitae 
+                        dui vulputate, fringilla eros eget, sodales sapien. Integer non nulla gravida lorem 
+                        bibendum accumsan.
+                    </p>
+
+                    <!-- Learn More button-->
+                    <a class="button" href="index.html"> Learn More <i class="icon icon-right"></i></a>
+                
                 </div>
             </div>
 
