--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -98,6 +98,7 @@
             <div class="section-container">
                 
                 <article id="services">
+                    <h2>Our Services</h2>
 
                     <!-- Digital Transformation-->
                     <section class="half-width">
@@ -328,7 +329,7 @@
                         <h3>Location</h3>
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9913365427633!2d-75.75945778526464!3d45.348987149146204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1638453098395!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </section>
-                </div>
+                </article>
             </div>
 
             <!-- Footer -->
