Styled logo and navigation

--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -5,6 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="stylesheet" href="styles/main.css">
+
         <!-- Stylesheet for the fico icons-->
         <link rel="stylesheet" href="styles/icons.css">
     
@@ -21,7 +23,7 @@
                 <div class="section-container">
                     
                     <!-- Logo-->
-                    <div class="header-flex-item">
+                    <div class="header-flex-item"  id="logo">
                         <img class="header" src="images/logo.png" alt="">
                     </div>
 
@@ -42,13 +44,12 @@
                         </form>
                     </nav>
                 </div>
-            </header>
 
-            <!-- Home Section flex box. main-banner image BG-->
-                <div class="section-container">
+                <!-- Home Section flex box. main-banner image BG-->
+                <div class="section-container" id="home">
 
                     <!-- low opacity BG-->
-                    <article id="home">
+                    <article>
 
                         <!-- Welcome Message-->
                         <h1>Welcome to Three Star Media</h1>
@@ -62,6 +63,7 @@
 
                     </article>
                 </div>
+            </header>
 
             <!-- About Section -->
             <div class="section-container">
