styled search bar

--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -38,7 +38,7 @@
                         <a href="#contact">Contact</a>
 
                         <!-- Search Bar-->
-                        <form class="header-flex-item" action="index.html" method="post">
+                        <form id="search" action="index.html" method="post">
                             <input type="text" placeholder="Search" name="search">                           
                             <button type="submit"><i class="icon icon-zoom"></i></button>
                         </form>
