Added Open sans font family

--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -5,7 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <!-- Main style sheet-->
         <link rel="stylesheet" href="styles/main.css">
+
+        <!-- Open sans font linked from Google-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
         <!-- Stylesheet for the fico icons-->
         <link rel="stylesheet" href="styles/icons.css">
