styled welcome section

--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -53,12 +53,17 @@
 
                 <!-- Home Section flex box. main-banner image BG-->
                 <div class="section-container" id="home">
-                    <div class="faded">
+                    <div class="faded text-container">
                         <!-- Welcome Message-->
                         <h1>Welcome to Three Star Media</h1>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc posuere lacus sed 
-                            felis euismod, quis dictum neque luctus. Integer et tellus nunc. 
+                            Lorem ipsum dolor sit amet, consectetur 
+                            adipiscing elit. Pellentesque bibendum dignissim feugiat. 
+                            Nam rutrum neque id consectetur molestie. Praesent pretium 
+                            luctus felis quis sagittis. Donec vulputate laoreet tortor, 
+                            at ornare justo luctus vel. Nullam dictum purus et aliquam 
+                            semper. Ut varius feugiat erat, et tincidunt sem imperdiet a. 
+                            Mauris non malesuada elit.
                         </p>
 
                         <!-- Connect with Us - Button linked to the contact section-->
