styled buttons and adjusted font/heading line heights

--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -67,7 +67,7 @@
                         </p>
 
                         <!-- Connect with Us - Button linked to the contact section-->
-                        <a href="#contact">Connect with Us <i class="icon icon-right"></i></a>
+                        <a href="#contact" class="button highlighted-button">Connect with Us <i class="icon icon-right"></i></a>
                     </div>
                 </div>
             </header>
