styled vision section and made global bg image class

--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -51,10 +51,10 @@
                     </nav>
                 </div>
 
-                <!-- Home Section flex box. main-banner image BG-->
-                <div class="section-container" id="home">
+                <!-- Welcome Section -->
+                <div class="section-container img-bg" id="home">
                     <div class="faded text-container">
-                        <!-- Welcome Message-->
+                        
                         <h1>Welcome to Three Star Media</h1>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur 
@@ -219,9 +219,9 @@
             </div> <!-- end of services section container-->
 
             <!-- Vision section flex box. No link anchor for this section vision image BG-->
-            <div class="section-container">
+            <div class="section-container img-bg" id="vision">
 
-                <article id="vision">
+                <article>
 
                     <!-- I couldn't help myself...-->
                     <h3>Our Vision</h3>
@@ -232,7 +232,7 @@
                     </p>
 
                     <!-- Learn More button-->
-                    <a class="button" href="index.html"> Learn More <i class="icon icon-right"></i></a>
+                    <a class="button blue-button" href="index.html"> Learn More <i class="icon icon-right"></i></a>
                 
                 </article>
             </div>
