styled contact section

--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -46,7 +46,7 @@
                         <!-- Search Bar-->
                         <form id="search" action="index.html" method="post">
                             <input type="text" placeholder="Search" name="search">                           
-                            <button type="submit"><i class="icon icon-zoom"></i></button>
+                            <button type="submit" class=" gold-button"><i class="icon icon-zoom"></i></button>
                         </form>
                     </nav>
                 </div>
@@ -309,7 +309,7 @@
                             <textarea id="message" name="message" rows="5"></textarea>
                             
                             <!-- Submit button-->
-                            <input type="submit" value="SEND" class="own_line">
+                            <input type="submit" value="Send" class="own_line gold-button">
                         </form>
                     </section>
 
