--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -25,18 +25,14 @@
 
             <header>
 
-                <!-- Header content. Will hold items in a flex box-->
-                <div class="section-container">
+                <!-- Header -->
+                <div class="section-container" >
                     
-                    <!-- Logo-->
-                    <div class="header-flex-item"  id="logo">
-                        <img class="header" src="images/logo.png" alt="">
-                    </div>
-
-                    <!-- Navigation Bar. Will hold links in a grid-->
+                    <!-- Navigation Bar-->
                     <nav class="header-flex-item">
+                        <img id="logo" src="images/logo.png" alt="">
 
-                        <!-- Section Links-->
+                        <!-- Navigation Links-->
                         <a href="#home">Home</a>
                         <a href="#about">About Us</a>
                         <a href="#services">Services</a>
@@ -347,10 +343,11 @@
 
             <!-- Footer -->
             <footer>
-                
-                <!-- Copyright and photo credits-->
-                <p>&copy; Copyright Three Star Media, 2020</p>
-                <p>All images are taken from <a href="https://unsplash.com/">Unsplash</a></p>
+                <div class="section-container">
+                    <!-- Copyright and photo credits-->
+                    <p>&copy; Copyright Three Star Media, 2020</p>
+                    <p>All images are taken from <a href="https://unsplash.com/">Unsplash</a></p>
+                </div>
             </footer>
 
         </div>
