styled desktop services section

--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -98,6 +98,7 @@
                 
                 <h2>Our Services</h2>
                 
+                <div class="grid-container">
                 <!-- Digital Transformation-->
                 <section class="half-width highlight">
                     <img src="images/digital.jpg" alt="">
@@ -202,7 +203,7 @@
                         <a class="full-width button" href="index.html"> Print Plans <i class="icon icon-right"></i></a>
                     </div> 
                 </section>
-
+                </div>
             </article>
 
             <!-- Vision section flex box. No link anchor for this section vision image BG-->
