HTML and CSS validated

--- a/final-assignment/index.html
+++ b/final-assignment/index.html
@@ -75,10 +75,11 @@
 
                 <!-- About Us image content-->
                 <img class="half-width" src="images/about-us.jpg" alt="">
-
-                <!-- About Us text content-->
-                <section class="text-container"> 
+                
+                <div class="text-container">
                     <h2>About Us</h2>
+
+                    <!-- About Us text content-->                    
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus turpis magna, 
                         eleifend sit amet quam non, ultrices maximus urna. Aliquam ultricies dolor eu mi bibendum, 
@@ -90,7 +91,7 @@
                         egestas. Suspendisse eget leo odio. Aliquam non enim venenatis, elementum ante a, aliquam 
                         dolor. Aliquam eget dignissim enim, ut dapibus est. 
                     </p>
-                </section>
+                </div>
             </article>
 
             <!-- Services section-->
